# nullspace_mpc

./: LICENSE.txt  Makefile  README.md
config/: move_base_teb.yaml  teb_local_planner.yaml
config/config/: costmap_common_global.yaml  costmap_common_local_nullspace_mpc.yaml
data/eval_demo/: agenda.yaml  episode_0000.yaml
data/eval_hundred/large/: agenda_large.yaml  episode_0000.yaml  episode_0001.yaml  episode_0002.yaml  episode_0003.yaml  episode_0004.yaml  episode_0005.yaml  episode_0006.yaml  episode_0007.yaml  episode_0008.yaml  episode_0009.yaml  episode_0010.yaml  episode_0011.yaml  episode_0012.yaml  episode_0013.yaml  episode_0014.yaml  episode_0015.yaml  episode_0016.yaml  episode_0017.yaml  episode_0018.yaml  episode_0019.yaml  episode_0020.yaml  episode_0021.yaml  episode_0022.yaml  episode_0023.yaml  episode_0024.yaml  episode_0025.yaml  episode_0026.yaml  episode_0027.yaml  episode_0028.yaml  episode_0029.yaml  episode_0030.yaml  episode_0031.yaml  episode_0032.yaml  episode_0033.yaml  episode_0034.yaml  episode_0035.yaml  episode_0036.yaml  episode_0037.yaml  episode_0038.yaml  (+61 more)
data/eval_hundred/small/: agenda_small.yaml  episode_0000.yaml  episode_0001.yaml  episode_0002.yaml  episode_0003.yaml  episode_0004.yaml  episode_0005.yaml  episode_0006.yaml  episode_0007.yaml  episode_0008.yaml  episode_0009.yaml  episode_0010.yaml  episode_0011.yaml  episode_0012.yaml  episode_0013.yaml  episode_0014.yaml  episode_0015.yaml  episode_0016.yaml  episode_0017.yaml  episode_0018.yaml  episode_0019.yaml  episode_0020.yaml  episode_0021.yaml  episode_0022.yaml  episode_0023.yaml  episode_0024.yaml  episode_0025.yaml  episode_0026.yaml  episode_0027.yaml  episode_0028.yaml  episode_0029.yaml  episode_0030.yaml  episode_0031.yaml  episode_0032.yaml  episode_0033.yaml  episode_0034.yaml  episode_0035.yaml  episode_0036.yaml  episode_0037.yaml  episode_0038.yaml  (+61 more)
data/eval_ten/large/: agenda_large.yaml  episode_0000.yaml  episode_0001.yaml  episode_0002.yaml  episode_0003.yaml  episode_0004.yaml  episode_0005.yaml  episode_0006.yaml  episode_0007.yaml  episode_0008.yaml  episode_0009.yaml
data/eval_ten/small/: agenda_small.yaml  episode_0000.yaml  episode_0001.yaml  episode_0002.yaml  episode_0003.yaml  episode_0004.yaml  episode_0005.yaml  episode_0006.yaml  episode_0007.yaml  episode_0008.yaml  episode_0009.yaml
data/rviz/: dark_mode.rviz  navigation.rviz
docker/: Dockerfile  Dockerfile_cpu  Dockerfile_gpu  ros_entrypoint.sh
launch/: gazebo_world.launch  gmapping.launch  navigation.launch  rosbag_play.launch
shell/: ensure_cmake.sh  install_osqp.sh  install_osqp_eigen.sh  killall.sh  run_multiple_agenda.sh
src/control/mppi_3d/: CMakeLists.txt  README.md  package.xml
src/control/mppi_3d/config/: mppi_3d_a.yaml  mppi_3d_b.yaml
src/control/mppi_3d/include/mppi_3d/: mppi_3d.hpp
src/control/mppi_3d/src/: mppi_3d.cpp
src/control/mppi_4d/: CMakeLists.txt  README.md  package.xml
src/control/mppi_4d/config/: mppi_4d.yaml
src/control/mppi_4d/include/mppi_4d/: mppi_4d.hpp
src/control/mppi_4d/src/: mppi_4d.cpp
src/control/mppi_h/: CMakeLists.txt  README.md  package.xml
src/control/mppi_h/config/: mppi_h.yaml
src/control/mppi_h/src/: mppi_h.cpp
src/control/nullspace_mpc/: CMakeLists.txt  README.md  package.xml
src/control/nullspace_mpc/config/: nullspace_mpc.yaml  nullspace_mpc_lite.yaml
src/control/nullspace_mpc/launch/: nullspace_mpc.launch
src/control/nullspace_mpc/src/: hqp.cpp  nullspace_mpc.cpp  nullspace_mpc_core.cpp  nullspace_mpc_node.cpp
src/custom_msgs/mpc_eval_msgs/: CMakeLists.txt  package.xml
src/evaluation/mpc_nav_evaluator/: CMakeLists.txt  README.md  package.xml
src/evaluation/mpc_nav_evaluator/config/: mpc_nav_evaluator.yaml
src/evaluation/mpc_nav_evaluator/launch/: mpc_nav_evaluator.launch
src/evaluation/mpc_nav_evaluator/scripts/: mpc_nav_evaluator.py  run_evaluation.py
src/planning/reference_costmap_generator/src/: reference_costmap_generator.cpp
src/visualization/map_visualizer/: CMakeLists.txt  README.md  package.xml
src/visualization/map_visualizer/src/: map_visualizer.cpp
(+15 files in other folders)
